2003-06-11  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* ld-mips-elf/multi-got-1.d: Adjust addresses.
	* ld-mips-elf/rel32-n32.d: Likewise.

2003-06-11  Alan Modra  <amodra@bigpond.net.au>

	* ld-srec/srec.exp (run_srec_test): Remove powerpc64 xfails, and
	xfail for hppa duplicated elsewhere.

2003-06-10  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* ld-mips-elf/rel32-n32.d: Force big endian assembly.
	* ld-mips-elf/rel32-o32.d: Likewise.
	* ld-mips-elf/rel64.d: Likewise.

2003-06-10  Alan Modra  <amodra@bigpond.net.au>

	* ld-elfvsb/elfvsb.exp: Run for powerpc64 too.
	* ld-powerpc/tls.t: Update.
	* ld-powerpc/tlsexe.d: Update.
	* ld-powerpc/tlsexe.r: Update.
	* ld-powerpc/tlsexetoc.d: Update.
	* ld-powerpc/tlsexetoc.r: Update.
	* ld-powerpc/tlsexetoc.t: Update.
	* ld-powerpc/tlsso.d: Update.
	* ld-powerpc/tlsso.g: Update.
	* ld-powerpc/tlsso.r: Update.
	* ld-powerpc/tlsso.t: Update.
	* ld-powerpc/tlstocso.d: Update.
	* ld-powerpc/tlstocso.g: Update.
	* ld-powerpc/tlstocso.r: Update.
	* ld-powerpc/tlstocso.t: Update.

2003-06-03  H.J. Lu <hongjiu.lu@intel.com>

	* ld-discard/extern.d: Updated.
	* ld-discard/start.d: Likewise.
	* ld-discard/static.d: Likewise.

2003-06-03  H.J. Lu <hongjiu.lu@intel.com>

	* ld-elfcomm/elfcomm.exp: Mark tests untested if compiler is
	not available.

2003-06-02  Fabrizio Gennari  <fabrizio.ge@tiscalinet.it>

	* ld-cygwin: New directory.
	* ld-cygwin/exe-export.exp: New test script.  Checks building
	cygwin executables with an export table.
	* ld-cygwin/testdll.def: New source file.
	* ld-cygwin/testexe.def: New source file.
	* ld-cygwin/testdll.c: New source file.
	* ld-cygwin/testexe.c: New source file.

2003-05-30  H.J. Lu <hongjiu.lu@intel.com>

	* config/default.exp: Load tmpdir/libpath.exp.
	(gcc_ld_flag): Set from $libpath.

2003-05-27  Jason Thorpe  <thorpej@wasabisystems.com>

	* ld-elf/elf.exp: Use if_elf_format.
	* ld-elf/sec64k.exp: Likewise.
	* ld-elfcomm/elfcomm.exp: Likewise.