@@ -10,3 +10,6 @@ __start:
 	.space 64
 	jal .Lstart
 .end __start
+
+# make objdump print ...
+	.space 8
