@@ -1,3 +1,11 @@
+2003-06-12  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>
+
+	* ld-mips-elf/relax-jalr.s: Fix testsuite breakage.
+	* ld-mips-elf/relax-jalr-n32.d: Likewise.
+	* ld-mips-elf/relax-jalr-n32-shared.d: Likewise.
+	* ld-mips-elf/relax-jalr-n64.d: Likewise.
+	* ld-mips-elf/relax-jalr-n64-shared.d: Likewise.
+
 2003-06-11  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>
 
 	* ld-mips-elf/multi-got-1.d: Adjust addresses.
